--- a/KalendriApp/Views/Event/Edit.cshtml
+++ b/KalendriApp/Views/Event/Edit.cshtml
@@ -128,7 +128,7 @@
 
             <div class="form-group">
                 <label for="CategoryId">Kategooria</label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.Categories" required></select>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.Category" required></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
 
