logout button added

--- a/KalendriApp/Views/Event/Index.cshtml
+++ b/KalendriApp/Views/Event/Index.cshtml
@@ -21,6 +21,7 @@
             <a href="/Event/Index">Kalender</a>
             <a href="/Account/Login">Logi sisse</a>
             <a href="/Account/Register">Registreeru</a>
+            <a href="@Url.Action("Logout", "Account")">Logi välja</a>
         </nav>
     </header>
 
